Add two new themes

--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-  "name": "one-dark-flexoki",
-  "displayName": "One Dark Flexoki",
-  "description": "A custom theme combining One Dark Darker and Flexoki",
-  "version": "1.1.0",
-  "publisher": "yfyx",
-  "icon": "images/icon.png",
-  "engines": {
-    "vscode": "^1.90.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yafyx/onedarkflexoki"
-  },
-  "categories": [
-    "Themes"
-  ],
-  "keywords": [
-    "one dark",
-    "onedark",
-    "one dark darker",
-    "darker",
-    "theme",
-    "flexoki"
-  ],
-  "contributes": {
-    "themes": [
-      {
-        "label": "One Dark Flexoki",
-        "uiTheme": "vs-dark",
-        "path": "./themes/One Dark Flexoki-color-theme.json"
-      }
-    ]
-  }
+	"name": "one-dark-flexoki",
+	"displayName": "One Dark Flexoki",
+	"description": "A custom theme combining One Dark Darker and Flexoki",
+	"version": "1.1.0",
+	"publisher": "yfyx",
+	"icon": "images/icon.png",
+	"engines": {
+		"vscode": "^1.90.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/yafyx/onedarkflexoki"
+	},
+	"categories": [
+		"Themes"
+	],
+	"keywords": [
+		"one dark",
+		"onedark",
+		"one dark darker",
+		"darker",
+		"theme",
+		"flexoki"
+	],
+	"contributes": {
+		"themes": [
+			{
+				"label": "One Dark Flexoki",
+				"uiTheme": "vs-dark",
+				"path": "./themes/One Dark Flexoki-color-theme.json"
+			},
+			{
+				"label": "Flexoki Zed",
+				"uiTheme": "vs-dark",
+				"path": "./themes/Flexoki Zed-color-theme.json"
+			},
+			{
+				"label": "Flexoki Dark Harmonized Zed",
+				"uiTheme": "vs-dark",
+				"path": "./themes/One Dark Flexoki Zed-color-theme.json"
+			}
+		]
+	}
 }
